# trading-bot-monorepo

./: .gitignore  package-lock.json  package.json
.github/workflows/: ci.yml
backtester-fsharp/: Directory.Build.props  Dockerfile  backtester.fsproj  shell.nix
backtester-fsharp/config/: settings.yaml
backtester-fsharp/src/: BacktesterService.fs  Config.fs  Program.fs
backtester-fsharp/src/Data/: HistoricalDataLoader.fs
backtester-fsharp/src/Dsl/: Ast.fs  Interpreter.fs  Lexer.fsl  Parser.fsy
backtester-fsharp/src/Metrics/: MetricsCalculator.fs
backtester-fsharp/src/MlTesting/: MlTestingClient.fs
backtester-fsharp/src/Simulation/: SimulationEngine.fs  SimulationTypes.fs
data-ingestion-rust/: Cargo.toml  Dockerfile  build.rs  shell.nix
data-ingestion-rust/src/: build.rs  config.rs  connector.rs  error.rs  grpc_client.rs  health_check.rs  lib.rs  main.rs  market_stream.rs  order_exec.rs  type.rs  user_data_stream.rs  utils.rs
indicator-engine-cpp/: CMakeLists.txt  Dockerfile  package.nix  shell.nix
indicator-engine-cpp/config/: setting.yaml
indicator-engine-cpp/include/: CircularBuffer.h  ThreadPool.h  config.h  data_manager.h  indicator_calculator.h  indicator_service_impl.h  interface.h  logging.h
indicator-engine-cpp/include/Indicators/: EMA.h  IndicatorBase.h  RSI.h  SMA.h  ema.h  macd.h  rsi.h  sma.h
indicator-engine-cpp/include/utils/: conversions.h  indicator_engine_error.h  sync.h
indicator-engine-cpp/src/: config.cpp  data_manager.cpp  health_check.cpp  indicator_calculator.cpp  indicator_service_impl.cpp  interface.cpp  main.cpp  simd_utils.cpp
indicator-engine-cpp/src/Indicators/: EMA.cpp  RSI.cpp  SMA.cpp  ema.cpp  macd.cpp  rsi.cpp  sma.cpp
indicator-engine-cpp/src/utils/: conversions.cpp  indicator_engine_error.cpp  sync.cpp
indicator-engine-cpp/tests/: indicator_test.cpp
infrastructure-go/: Dockerfile  go.mod  main.go  shell.nix
infrastructure-go/config/: infrastructure_config.yaml
infrastructure-go/pkg/config/: config.go
infrastructure-go/pkg/configservice/: configservice.go
infrastructure-go/pkg/configstore/: configstore.go
infrastructure-go/pkg/discoveryservice/: discoveryservice.go
infrastructure-go/pkg/serviceregistry/: registry.go
ml-engine-julia-mojo/: Dockerfile  package.nix  shell.nix
ml-engine-julia-mojo/config/: settings.yaml
ml-engine-julia-mojo/julia/: Project.toml  build.jl
ml-engine-julia-mojo/julia/src/: MLEngine.jl  config.jl  data_manger.jl  health_check.jl  indicator_client.jl  main.jl  model_definition.jl  model_manager.jl  predictor.jl  trainer.jl  utils.jl
ml-engine-julia-mojo/julia/test/: runtests.jl
ml-engine-julia-mojo/mojo/: build.sh  model_inference.mojo
nix/: flake.nix
proto/: account_state.proto  backtester.proto  config_service.proto  discovery_service.proto  execution.proto  indicator_data.proto  market_data.proto  ml_prediction.proto  ml_testing.proto  risk_management.proto  strategy_engine.proto
risk-management-rust-coq/: Cargo.toml  Dockerfile  build.rs  shell.nix
risk-management-rust-coq/config/: settings.yaml
risk-management-rust-coq/coq/: RiskRules.v  RiskState.v  RiskStatePrimitives.v
risk-management-rust-coq/src/: account_state_client.rs  config.rs  data_stream_handlers.rs  execution_client.rs  main.rs  market_data_client.rs  risk_manager.rs  risk_rules.rs  risk_state.rs  strategy_engine_client.rs
strategy-dsl-ocaml/: Dockerfile  dune  dune-project  shell.nix
strategy-dsl-ocaml/config/: settings.yaml
strategy-dsl-ocaml/examples/: prediction_threshold.strat  readme.md  simple_ma_crossover.strat
strategy-dsl-ocaml/src/: main.ml  strategy_ast.ml  strategy_ast.mli  strategy_compiler.ml  strategy_compiler.mli  strategy_config.ml  strategy_config.mli  strategy_data.ml  strategy_data.mli  strategy_engine.ml  strategy_engine.mli  strategy_grpc.ml  strategy_grpc.mli  strategy_health_check.ml  strategy_health_check.mli  strategy_lexer.mll  strategy_parser.mly  strategy_typecheck.ml  strategy_typecheck.mli
strategy-gen-lisp/: Dockerfile  quicklisp.lisp  run.sh  settings.lisp  shell.nix  strategy-gen-lisp.asd
strategy-gen-lisp/src/: config.lisp  main.lisp  package.lisp
strategy-gen-lisp/src/dsl/: ast.lisp  generator.lisp  serializer.lisp
strategy-gen-lisp/src/gp/: core.lisp
strategy-gen-lisp/src/grpc/: backtester.lisp  core.lisp  strategy-engine.lisp
ui-sveltekit-typescript/bff-go/: Dockerfile  go.mod  go.sum  gqlgen.yml  main.go  server.go  shell.nix
ui-sveltekit-typescript/bff-go/config/: bff_config.yaml
ui-sveltekit-typescript/bff-go/graph/: resolver.go  schema.graphqls
ui-sveltekit-typescript/bff-go/pkg/accountstateclient/: client.go
ui-sveltekit-typescript/bff-go/pkg/backtesterclient/: client.go
ui-sveltekit-typescript/bff-go/pkg/config/: config.go
ui-sveltekit-typescript/bff-go/pkg/infrastructureclient/: client.go
ui-sveltekit-typescript/frontend/: Dockerfile  codegen.yml  package-lock.json  package.json  shell.nix  svelte.config.js  tsconfig.json
ui-sveltekit-typescript/frontend/src/lib/components/: AccountSummary.svelte  EquityChart.svelte  MetricsTable.svelte  OpenOrdersTable.svelte  PositionsTable.svelte  RiskMetricsSummary.svelte  ServiceStatusTable.svelte  TradeList.svelte
ui-sveltekit-typescript/frontend/src/lib/graphql/: client.ts
ui-sveltekit-typescript/frontend/src/lib/graphql/queries/: backtests.graphql  dashboard.graphql  status.graphql
ui-sveltekit-typescript/frontend/src/routes/: +layout.svelte
ui-sveltekit-typescript/frontend/src/routes/backtests/: +page.ts
ui-sveltekit-typescript/frontend/src/routes/backtests/[id]/: +page.svelte  +page.ts
ui-sveltekit-typescript/frontend/src/routes/dashboard/: +page.svelte  +page.ts
ui-sveltekit-typescript/frontend/src/routes/status/: +page.svelte  +page.ts
