[package]
name = "data-ingestion-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] } # Full features for simplicity in example, refine in prod
barter-data = { version = "0.7", features = ["default", "with-serde"] } # Use default features including exchange support, plus serde for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use thiserror for custom errors
thiserror = "1.0"
anyhow = "1.0" # Still useful for simpler top-level error handling in main
futures = "0.3" # Utilities for async streams, .fuse()
url = "2.5" # For URL parsing
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false } # Secure TLS, JSON
async-trait = "0.1" # For async traits

# Binance API specific
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] } # For timestamps
http = "1.0" # For building request URLs and headers
form_urlencoded = "0.1" # For building query strings

# Rate Limiting (Example using governor)
governor = "0.6"
# pin-project-lite = "0.2" # Usually pulled transitively

# gRPC dependencies
tonic = "0.11"
prost = "0.12"
prost-types = "0.12" # For Timestamp, etc.

# Configuration management
config = { version = "0.14", features = ["yaml", "toml", "json"] } # Flexible config loading

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2" # For tracing async operations

# Financial types
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"

# Graceful Shutdown
tokio-util = { version = "0.7", features = ["signal"] } # For CancellationToken or similar

# HTTP Server for Health Check
warp = "0.3" # Lightweight web server framework
tokio-stream = "0.1" # Needed by warp

# Feature flags for exchanges (Only keeping Binance for now)
[features]
binance_rest = [] # Keep the feature flag even if only one exchange, useful later

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
tokio-tungstenite = "0.21" # For mocking WebSockets
mockito = "1.4" # For mocking REST calls