(lang dune 3.11)

(using ctypes 0.3)
(using ppx_lwt 3.0) ; Ensure ppx_lwt version is compatible

(name strategy_dsl)

(repositories
 (default
  (source (copy ../../_opam/repo))))

(package
 (name strategy_dsl)
 (synopsis "Trading Strategy DSL Engine")
 (description "Parses, compiles, and executes trading strategies based on indicators and predictions.")
 (depends
  (ocaml
   (>= 4.14.0))
  (dune >= 3.0)
  (menhir)
  (ocamlllex)
  (ocaml-protoc >= 0.1)
  (ocaml-protoc-plugin >= 0.1)
  (ocaml-grpc >= 0.1)
  (ocaml-grpc-lwt >= 0.1)
  (lwt >= 5.0)
  (lwt_mutex)
  (lwt_condition)
  (cohttp-lwt-unix >= 5.0)
  (logs)
  (mtime)
  (ppx_sexp_conv)
  (sexplib)
  (yaml-ez >= 0.1)
  (uri)
  (batteries)
  (yojson)
  (ptime)
  (result)
  (csexp)
  (ppx_lwt) ; Added explicitly
  (prometheus) ; For metrics placeholder
  (prometheus-app) ; For metrics endpoint
 ))

(build.prob_rules)